# crossword-copilot

backend/: pyproject.toml
backend/src/mycode/: solve_xword.py
